Fixed a z-index problem

--- a/imports/ui/WelcomePage/_WelcomePage.scss
+++ b/imports/ui/WelcomePage/_WelcomePage.scss
@@ -14,6 +14,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 1;
   background-color: $peter-river-color;
   width: 0;
   border-radius: 50%;
